--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -7,6 +7,9 @@
 	justify-content: space-between;
 	width: 100%;
 	position: sticky;
+	top: 0;
+	left: 0;
+	z-index: 5;
 	position: -webkit-sticky;
 }
 
